--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,8 +9,10 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "axios": "^1.7.9",
     "jotai": "^2.11.1",
     "next": "15.1.5",
+    "next-auth": "^4.24.11",
     "next-fonts": "^1.5.1",
     "next-themes": "^0.4.4",
     "react": "^19.0.0",
