refactor: Restructured the components to small components of each routing

--- a/frontend/tsconfig.json
+++ b/frontend/tsconfig.json
@@ -20,6 +20,8 @@
     ],
     "paths": {
       "@/*": ["./src/*"]
+      // "@/components/*": ["app/components/*"],
+      // "@/utils/*": ["utils/*"]
     }
   },
   "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts"],
