--- a/frontend/package.json
+++ b/frontend/package.json
@@ -17,7 +17,8 @@
     "next-themes": "^0.4.4",
     "react": "^19.0.0",
     "react-device-detect": "^2.2.3",
-    "react-dom": "^19.0.0"
+    "react-dom": "^19.0.0",
+    "react-toastify": "^11.0.3"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
