--- a/frontend/package.json
+++ b/frontend/package.json
@@ -17,11 +17,13 @@
     "next": "15.1.5",
     "next-auth": "^4.24.11",
     "next-fonts": "^1.5.1",
+    "next-pwa": "^5.6.0",
     "next-themes": "^0.4.4",
     "react": "^19.0.0",
     "react-device-detect": "^2.2.3",
     "react-dom": "^19.0.0",
-    "react-toastify": "^11.0.3"
+    "react-toastify": "^11.0.3",
+    "react-webcam": "^7.2.0"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
