--- a/backend/package.json
+++ b/backend/package.json
@@ -23,7 +23,9 @@
     "express": "^4.21.2",
     "google-auth-library": "^9.15.1",
     "jsonwebtoken": "^9.0.2",
-    "mongoose": "^8.9.5"
+    "mongoose": "^8.9.5",
+    "serverless-http": "^3.2.0",
+    "vercel": "^40.1.0"
   },
   "devDependencies": {
     "@types/cors": "^2.8.17",
