--- a/backend/vercel.json
+++ b/backend/vercel.json
@@ -1,15 +1,16 @@
 {
-  "version": 2,
-  "builds": [
-    {
-      "src": "src/app.ts",
-      "use": "@vercel/node"
-    }
-  ],
-  "routes": [
-    {
-      "src": "/src/(.*)",
-      "dest": "/src/app.ts"
-    }
-  ]
+    "version": 2,
+    "builds": [
+        {
+            "src": "dist/app.js",
+            "use": "@vercel/node",
+            "config": { "includeFiles": ["dist/**"] }
+        }
+    ],
+    "routes": [
+        {
+            "src": "/(.*)",
+            "dest": "dist/app.js"
+        }
+    ]
 }
