--- a/frontend/package.json
+++ b/frontend/package.json
@@ -17,6 +17,7 @@
     "jotai": "^2.11.1",
     "js-cookie": "^3.0.5",
     "jsonwebtoken": "^9.0.2",
+    "lucide-react": "^0.474.0",
     "next": "15.1.5",
     "next-auth": "^4.24.11",
     "next-fonts": "^1.5.1",
