--- a/frontend/package.json
+++ b/frontend/package.json
@@ -27,6 +27,7 @@
     "react-confirm-alert": "^3.0.6",
     "react-device-detect": "^2.2.3",
     "react-dom": "^19.0.0",
+    "react-easy-crop": "^5.2.0",
     "react-player": "^2.16.0",
     "react-toastify": "^11.0.3",
     "react-webcam": "^7.2.0"
