--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,11 +12,13 @@
     "@aws-sdk/client-s3": "^3.741.0",
     "@ffmpeg/ffmpeg": "^0.12.15",
     "@ffmpeg/util": "^0.12.2",
+    "@types/lodash.debounce": "^4.0.9",
     "axios": "^1.7.9",
     "jose": "^5.9.6",
     "jotai": "^2.11.1",
     "js-cookie": "^3.0.5",
     "jsonwebtoken": "^9.0.2",
+    "lodash": "^4.17.21",
     "lucide-react": "^0.474.0",
     "next": "15.1.5",
     "next-auth": "^4.24.11",
