--- a/frontend/package.json
+++ b/frontend/package.json
@@ -31,7 +31,8 @@
     "react-dom": "^19.0.0",
     "react-easy-crop": "^5.2.0",
     "react-player": "^2.16.0",
-    "react-toastify": "^11.0.3"
+    "react-toastify": "^11.0.3",
+    "react-use": "^17.6.0"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
