--- a/frontend/package.json
+++ b/frontend/package.json
@@ -30,6 +30,7 @@
     "react-device-detect": "^2.2.3",
     "react-dom": "^19.0.0",
     "react-easy-crop": "^5.2.0",
+    "react-infinite-scroll-component": "^6.1.0",
     "react-player": "^2.16.0",
     "react-toastify": "^11.0.3",
     "react-use": "^17.6.0"
