--- a/frontend/package.json
+++ b/frontend/package.json
@@ -32,8 +32,10 @@
     "react-easy-crop": "^5.2.0",
     "react-infinite-scroll-component": "^6.1.0",
     "react-player": "^2.16.0",
+    "react-slick": "^0.30.3",
     "react-toastify": "^11.0.3",
-    "react-use": "^17.6.0"
+    "react-use": "^17.6.0",
+    "slick-carousel": "^1.8.1"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
@@ -43,6 +45,7 @@
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
+    "@types/react-slick": "^0.23.13",
     "eslint": "^9",
     "eslint-config-next": "15.1.5",
     "postcss": "^8",
